# Kuring

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  build.bat  build_spirv.bat  clean.bat
src/: FileLocations.h  GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.h  HelloTriangleApplication.h  Input.cpp  Input.h  KuringTypes.h  Models.cpp  Models.h  Platform.h  UniformStructs.h  Util.cpp  Util.h  Utils.cpp  VulkanApp.cpp  VulkanApp.h  VulkanUtil.cpp  VulkanUtil.h  main.cpp
src/shaders/: PosColor.vert  PosColor_3DTransMats.vert  RayMarchSphere.frag  VertexColor.frag  test_fragment_shader.frag  test_vertex_shader.vert
